# minimal_mnist

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/minimal_mnist/: main.py  solution.py
