[project]
name = "minimal-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "torchvision>=0.19.1",
]

[project.scripts]
main = "minimal_mnist.main:main"
solution = "minimal_mnist.final_solution:solution"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
